main Refaktorering och lite uppdateringar av koden