@@ -1,7 +1,6 @@
 package paxml4j.xml;
 
 import java.time.temporal.Temporal;
-import java.util.stream.Collectors;
 import paxml4j.domain.SchemeTransactions;
 import xmlight.*;
 
@@ -13,7 +12,7 @@ public class PaxSchemeTransactions {
 
     public static XmlNode parse(SchemeTransactions entity) {
         XmlNode node = NodeFactory.createNode("schematransaktioner");
-        node.addChildren(entity.transactions().stream().map(PaxTransaction::parse).collect(Collectors.toList()));
+        node.addChildren(entity.transactions().stream().map(PaxTransaction::parse).toList());
         return node;
     }
 
@@ -23,7 +22,7 @@ public class PaxSchemeTransactions {
             XmlNode node = NodeFactory.createNode("schema");
             entity.employmentId().ifPresent(s -> node.addAttribute("anstid", s));
             entity.personalIdentityNumber().ifPresent(s -> node.addAttribute("persnr", s));
-            node.addChildren(entity.days().stream().map(PaxDay::parse).collect(Collectors.toList()));
+            node.addChildren(entity.days().stream().map(PaxDay::parse).toList());
             return node;
         }
     }
